<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_5sdp"
        android:id="@+id/cons_my"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/alert_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/info"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/tilni_tanlang"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:textStyle="normal"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/grup"
            app:layout_constraintTop_toBottomOf="@id/info"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/uz"
                android:text="@string/u_zbek_tili"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                android:textColor="?attr/textColorApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/ru"
                android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="normal"
                android:textSize="@dimen/_12sdp"
                android:textColor="?attr/textColorApp"
                android:text="@string/ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="?attr/textColorApp"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="normal"
                android:id="@+id/en"
                android:text="@string/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <TextView
            android:id="@+id/ok"
            app:layout_constraintTop_toBottomOf="@id/grup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="normal"
            android:textSize="@dimen/_13sdp"
            android:textColor="?attr/textColorApp"
            android:padding="@dimen/_5sdp"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>