<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.settings.SettingsFragment">
    <TextView
        android:id="@+id/name_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sozlamalar"
        android:textColor="?attr/textColorApp"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tema"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/settings"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/name_fragment"
        app:layout_constraintTop_toBottomOf="@id/name_fragment"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintWidth_percent="0.9">

        <ImageView
            android:id="@+id/image_tema"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_art"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temalar"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/image_tema"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toRightOf="@id/image_tema"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_tema" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lan"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/settings"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/name_fragment"
        app:layout_constraintTop_toBottomOf="@id/tema"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.9">

        <ImageView
            android:id="@+id/tongue"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_internet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tongue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dastur_tili"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/tongue"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toRightOf="@id/tongue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tongue" />

        <TextView
            android:id="@+id/tongue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_zbek_tili"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/tongue"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toRightOf="@id/tongue1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tongue" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/settings"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/name_fragment"
        app:layout_constraintTop_toBottomOf="@id/lan"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.9">

        <ImageView
            android:id="@+id/share1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_frame__5_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/share2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ulashish"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/share1"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toRightOf="@id/share1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/share1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_app"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/settings"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/name_fragment"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintWidth_percent="0.9">

        <ImageView
            android:id="@+id/info_app1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_frame__6_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_app2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dastur_haqida"
            android:textColor="?attr/textColorApp"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/info_app1"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toRightOf="@id/info_app1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/info_app1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>